fix__overflow-right

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 
 .flex-wrap-row-importent {
     flex-direction: row;
-    width: 100%;
+    width: 90%;
 }
 
 main {
